...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_name_text_input_layout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/room_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="15dp" />
                </de.pcps.jamtugether.ui.base.views.JamTextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/create_room_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="@dimen/layout_margin_bottom"
...
