...
    <string name="soundtrack_over_view">Overview</string>
    <string name="musician_view">Musician View</string>

    <string name="name_input_empty">Du have to enter a name.</string>
    <string name="room_input_empty">You have to enter a room.</string>
    <string name="room_invalid">This room is invalid.</string>
    <string name="password_input_empty">You have to enter a password.</string>

    <string name="composite">Composite</string>
    <string name="own_soundtrack">Own soundtrack</string>

    <string name="composite_soundtrack_place_holder">Composite soundtrack</string>
    <string name="own_soundtrack_place_holder">Own soundtrack</string>
...
    <string name="room_or_password_invalid_message">Room or password is invalid.</string>
    <string name="page_not_found_error_title">Page not found</string>
    <string name="page_not_found_error_message">The requested page was not found.</string>
    <string name="internal_server_error_title">Error</string>
    <string name="internal_server_error_message">Something went wrong.</string>
    <string name="password_too_large_error_title">Error</string>
    <string name="password_too_large_error_message">Password is too large.</string>
    <string name="forbidden_access_error_title">No permission</string>
    <string name="forbidden_access_error_message">You don\'t have permission to execute this action.</string>
    <string name="no_internet_connection_title">No Internet</string>
    <string name="no_internet_connection_message">You don\'t have an internet connection.</string>
    <string name="room_number_limit_reached_error_title">Error</string>
    <string name="room_number_limit_reached_error_message">You can\'t create a new room because the number of existing rooms has reached its limit.</string>
...
