...
            android:layout_marginEnd="@dimen/soundtrack_item_margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/room_id_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_soundtracks_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
