...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:textColor="@color/primaryTextColor"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@id/delete_room_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/delete_room_button"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/delete_room_button"
...
